# argon2-browser

./: .bintray.json  .gitignore  .npmignore  .travis.yml  CMakeLists.txt  LICENSE  PNaClToolchain.cmake  README.md  bower.json  build-asm.sh  build-pnacl.sh  build-wasm.sh  build.sh  clean-cmake.sh  init.cc  package-lock.json  package.json  perf-test.c  publish.sh  webpack.config.js  wrap-em.js
.github/workflows/: build.yaml  main.yml  test.yml
argon2/src/: core.c  encoding.c
argon2/src/blake2/: blake2-impl.h
ci/: build.sh  install.sh  post-build.sh  prepare-deployment.js
docs/: argon2.nmf  index.html  test.html
docs/js/: calc.js  main.js  text-encoder-lite.min.js  worker.js
examples/node/: argon2-demo-node.js  package.json
examples/react/: config-overrides.js  package.json
examples/react/src/: App.css  App.js
examples/vanilla/: index.html  package.json  run.js
examples/webpack/: argon2-demo-webpack.js  index.html  package.json  webpack.config.js
lib/: argon2.js  em-post.js  em-pre.js
publish/: prepare.sh
src/: argon2_library.c
test/: browser.js  node-bundled.js  node.js
test/suite/: hash.js  verify.js
test/vanilla/: index.html  setup.js
test/webpack/: index.html  package.json  tests.js  webpack.config.js
